Fix deployment misalignments

--- a/views/course.ejs
+++ b/views/course.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapter <%= currentChapter %>: <%= chapter?.title %> - Personal Brand Course</title>
+    <title>Chapter <%= currentChapter %>: <%= chapter?.title %> - Top Voices Workbook</title>
     <link href="/styles.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
@@ -19,7 +19,7 @@
                         <div class="w-8 h-8 bg-primary rounded-lg flex items-center justify-center">
                             <i data-lucide="bookmark" class="w-4 h-4 text-primary-foreground"></i>
                         </div>
-                        <span>Personal Brand Course</span>
+                        <span>Top Voices Workbook</span>
                     </a>
                 </div>
                 
