--- a/views/toc.ejs
+++ b/views/toc.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table of Contents - Personal Brand Course</title>
+    <title>Table of Contents - Top Voices Workbook</title>
     <link href="/styles.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
@@ -19,7 +19,7 @@
                         <div class="w-8 h-8 bg-primary rounded-lg flex items-center justify-center">
                             <i data-lucide="bookmark" class="w-4 h-4 text-primary-foreground"></i>
                         </div>
-                        <span>Personal Brand Course</span>
+                        <span>Top Voices Workbook</span>
                     </a>
                 </div>
                 
@@ -223,7 +223,7 @@
             <div class="text-sm font-medium mb-2">Quick Start</div>
             <a href="/course/1" class="btn-primary btn-sm">
                 <i data-lucide="rocket" class="w-4 h-4 mr-1"></i>
-                Begin Course
+                Start Reading
             </a>
         </div>
     </div>
